changed path dir

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         pip install -r setup/requirements.txt
 
     - name: Make deploy script executable
-      run: chmod +x setup/deploy_streamlit.sh
+      run: chmod +x deploy_streamlit.sh
 
     - name: Deploy Streamlit App
       run: ./deploy_streamlit.sh
